# 2026-HackathonSomosNLP

./: .gitignore  LICENSE  README.md  pyproject.toml
siani/: scrapper.py
siani/data_preparation/: build_corpecan_qa_dataset.py  data_cleasing_main.py  scrapper_main.py
siani/data_preparation/data_cleansing/: data_loader.py  text_curator.py
siani/data_preparation/data_cleansing/text_curators/: academia_dictionary_text_curator.py  beautifulsoup_text_curator.py  clean_text_curator.py  datasketch_text_curator.py  datatrove_text_curator.py  ftfy_text_curator.py  gevic_text_curator.py  lingua_text_curator.py  nemo_text_curator.py  pipeline.py  regex_text_curator.py  (+6 more)
siani/data_preparation/scrappers/: academia_consultations_scrapper.py  academia_dictionary_scrapper.py  canariawiki_scrapper.py  corpecan_scrapper.py  gevic_scrapper.py
siani/post_training/: build_datasets.py  generate_with_base_model.py  review_app.py  test_qwen_style.py  test_qwen_style_rag.py  test_sft_from_continual.py  train_post_training.py  train_qwen_style.py  train_qwen_style_rag.py  train_sft_from_continual.py
siani/post_training/conversations/: test.py  train.py  train_on_normal.py
siani/post_training/conversations_rag/: test.py  train.py  train_on_normal.py
siani/post_training/corpecan/: test.py  train.py
siani/post_training/normal/: test.py  train.py
siani/post_training/normal_rag/: test.py  train.py
siani/scrappers/: corpecan_scrapper.py
siani/training/: collator.py  data.py  modeling.py  test_model.py  train.py
siani/training/configs/: accelerate_zero3.yaml  deepspeed_zero3.json
(+6 files in other folders)
