[project]
name = "hackathon-somosnlp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "clean-text>=0.7.1",
    "datasketch>=1.10.0",
    "datatrove>=0.9.0",
    "flask>=3.1.3",
    "ftfy>=6.3.1",
    "lingua-language-detector>=2.2.0",
    "nemo-curator>=1.2.0",
    "ollama>=0.6.2",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "rapidfuzz>=3.14.5",
    "selectolax>=0.4.9",
    "trafilatura>=2.0.0",
    "unstructured>=0.22.31",
]
